another sync with original CR
Signed-off-by: David Festal <dfestal@redhat.com>

--- a/controller-manifests/v2.0.0/codeready-workspaces.2.0.0.clusterserviceversion.yaml
+++ b/controller-manifests/v2.0.0/codeready-workspaces.2.0.0.clusterserviceversion.yaml
@@ -21,7 +21,7 @@ metadata:
              },
              "database": {
                 "externalDb": false,
-                "chePostgresHostname": "",
+                "chePostgresHostName": "",
                 "chePostgresPort": "",
                 "chePostgresUser": "",
                 "chePostgresPassword": "",
