--- a/controller-manifests/codeready-workspaces.package.yaml
+++ b/controller-manifests/codeready-workspaces.package.yaml
@@ -1,4 +1,7 @@
 packageName: codeready-workspaces
 channels:
-- name: final
+- name: stable
   currentCSV: crwoperator.v2.0.0
+- name: legacy
+  currentCSV: crwoperator.v1.2.2
+defaultChannel: stable
