--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -24,7 +24,7 @@ spec:
     spec:
       containers:
         - name: codeready-operator
-          image: quay.io/crw/operator-rhel8:latest
+          image: registry.redhat.io/codeready-workspaces/server-operator-rhel8:latest
           ports:
           - containerPort: 60000
             name: metrics
