--- a/deploy/operator-local.yaml
+++ b/deploy/operator-local.yaml
@@ -1,5 +1,5 @@
 #
-#  Copyright (c) 2012-2019 Red Hat, Inc.
+#  Copyright (c) 2020 Red Hat, Inc.
 #    This program and the accompanying materials are made
 #    available under the terms of the Eclipse Public License 2.0
 #    which is available at https://www.eclipse.org/legal/epl-2.0/
@@ -16,21 +16,22 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app: codeready-operator
+      name: codeready-operator
   template:
     metadata:
       labels:
-        app: codeready-operator
+        name: codeready-operator
     spec:
+      serviceAccountName: codeready-operator
       containers:
         - name: codeready-operator
-          image: registry.redhat.io/codeready-workspaces/crw-2-rhel8-operator:latest
+          image: codeready/operator
           ports:
-          - containerPort: 60000
-            name: metrics
+            - containerPort: 60000
+              name: metrics
           command:
-          - /usr/local/bin/che-operator
-          imagePullPolicy: Always
+            - codeready-operator
+          imagePullPolicy: IfNotPresent
 #          TODO: to be uncommented when issue
 #          https://github.com/operator-framework/operator-sdk/issues/1234
 #          is fixed
@@ -53,6 +54,3 @@ spec:
                   fieldPath: metadata.name
             - name: OPERATOR_NAME
               value: "codeready-operator"
-      restartPolicy: Always
-      serviceAccountName: codeready-operator
-      terminationGracePeriodSeconds: 5
