switch to pvcStrategy: common (was per-workspace for CRW <= 2.0) - discussion https://github.com/eclipse/che-operator/pull/53/files#r343742834
Change-Id: Ia4d93108cfe37cdd9a48c24c7a034fc696185460
Signed-off-by: nickboldt <nboldt@redhat.com>

--- a/controller-manifests/v2.1.0/codeready-workspaces.2.1.0.clusterserviceversion.yaml
+++ b/controller-manifests/v2.1.0/codeready-workspaces.2.1.0.clusterserviceversion.yaml
@@ -36,7 +36,7 @@ metadata:
                 "identityProviderClientId": ""
              },
              "storage": {
-                "pvcStrategy": "per-workspace",
+                "pvcStrategy": "common",
                 "pvcClaimSize": "1Gi",
                 "preCreateSubPaths": true
              }
