according to Che 7.8 csv, pvcStrategy DEFAULT is common but actual pvcStrategy remains per-workspace
Change-Id: I99f5d309878d3048ac56f574a4c10704fc67b011
Signed-off-by: nickboldt <nboldt@redhat.com>

--- a/controller-manifests/v2.1.0/codeready-workspaces.2.1.0.clusterserviceversion.yaml
+++ b/controller-manifests/v2.1.0/codeready-workspaces.2.1.0.clusterserviceversion.yaml
@@ -36,7 +36,7 @@ metadata:
                 "identityProviderClientId": ""
              },
              "storage": {
-                "pvcStrategy": "common",
+                "pvcStrategy": "per-workspace",
                 "pvcClaimSize": "1Gi",
                 "preCreateSubPaths": true
              }
