set tlsSupport:true in controller-manifests/v2.1.0/codeready-workspaces.2.1.0.clusterserviceversion.yaml
Change-Id: I27aa506b28ac350d39fc18bf7f0f6e0223dac75f
Signed-off-by: nickboldt <nboldt@redhat.com>

--- a/controller-manifests/v2.1.0/codeready-workspaces.2.1.0.clusterserviceversion.yaml
+++ b/controller-manifests/v2.1.0/codeready-workspaces.2.1.0.clusterserviceversion.yaml
@@ -16,7 +16,7 @@ metadata:
                 "cheFlavor":"codeready",
                 "devfileRegistryImage": "",
                 "pluginRegistryImage": "",
-                "tlsSupport": false,
+                "tlsSupport": true,
                 "selfSignedCert": false
              },
              "database": {
