sync changes in 7.14.1 to 2.2.0
Change-Id: Id7bcf656945b57d09bd210ec3088cfc9a5d2cd4b
Signed-off-by: nickboldt <nboldt@redhat.com>

--- a/controller-manifests/v2.2.0/codeready-workspaces.csv.yaml
+++ b/controller-manifests/v2.2.0/codeready-workspaces.csv.yaml
@@ -215,7 +215,7 @@ spec:
 
 
     ```
-    oc create secret self-signed-certificate generic --from-file=/path/to/certificate/ca.crt -n=$codeReadyNamespace
+    oc create secret generic self-signed-certificate  --from-file=/path/to/certificate/ca.crt -n=$codeReadyNamespace
     ```
   displayName: Red Hat CodeReady Workspaces
   icon:
