--- a/controller-manifests/v2.2.0/codeready-workspaces.csv.yaml
+++ b/controller-manifests/v2.2.0/codeready-workspaces.csv.yaml
@@ -438,6 +438,6 @@ spec:
       name: Nick Boldt
   maturity: stable
   provider:
-    name: Red Hat, Inc.
+    name: Red Hat
   replaces: crwoperator.v2.1.1
   version: 2.2.0
