--- a/controller-manifests/v2.3.0/codeready-workspaces.csv.yaml
+++ b/controller-manifests/v2.3.0/codeready-workspaces.csv.yaml
@@ -47,7 +47,7 @@ metadata:
     categories: Developer Tools, OpenShift Optional
     certified: "true"
     containerImage: registry.redhat.io/codeready-workspaces/crw-2-rhel8-operator:2.3
-    createdAt: "2020-07-15T18:41:15+00:00"
+    createdAt: "2020-07-16T17:14:38+00:00"
     description: A Kube-native development solution that delivers portable and collaborative
       developer workspaces in OpenShift.
     repository: https://github.com/redhat-developer/codeready-workspaces-operator/
@@ -312,7 +312,7 @@ spec:
                       - name: CHE_FLAVOR
                         value: codeready
                       - name: CONSOLE_LINK_NAME
-                        value: workspaces
+                        value: che
                       - name: CONSOLE_LINK_DISPLAY_NAME
                         value: CodeReady Workspaces
                       - name: CONSOLE_LINK_SECTION
