switch support to Red Hat (remove ', Inc.') because CVP has some weird rules
Change-Id: I9447fa1608c9b21c382abac42afaca44b5606448
Signed-off-by: nickboldt <nboldt@redhat.com>

--- a/manifests/codeready-workspaces.csv.yaml
+++ b/manifests/codeready-workspaces.csv.yaml
@@ -39,6 +39,9 @@ metadata:
                 "pvcStrategy": "per-workspace",
                 "pvcClaimSize": "1Gi",
                 "preCreateSubPaths": true
+             },
+             "metrics": {
+                "enable": true
              }
           }
         }
@@ -47,11 +50,13 @@ metadata:
     categories: Developer Tools, OpenShift Optional
     certified: "true"
     containerImage: registry.redhat.io/codeready-workspaces/crw-2-rhel8-operator:2.3
-    createdAt: "2020-07-16T19:32:53+00:00"
+    createdAt: "2020-07-17T03:12:14+00:00"
     description: A Kube-native development solution that delivers portable and collaborative
       developer workspaces in OpenShift.
+    operatorframework.io/cluster-monitoring: "true"
+    operatorframework.io/suggested-namespace: workspaces
     repository: https://github.com/redhat-developer/codeready-workspaces-operator/
-    support: Red Hat, Inc.
+    support: Red Hat
   name: crwoperator.v2.3.0
   namespace: placeholder
 spec:
@@ -242,8 +247,11 @@ spec:
               resources:
                 - infrastructures
                 - oauths
+                - proxies
               verbs:
                 - get
+                - list
+                - watch
             - apiGroups:
                 - user.openshift.io
               resources:
@@ -290,7 +298,7 @@ spec:
                       - name: OPERATOR_NAME
                         value: codeready-operator
                       - name: CHE_VERSION
-                        value: '2.3'
+                        value: 2.3.0
                       - name: RELATED_IMAGE_che_server
                         value: registry.redhat.io/codeready-workspaces/server-rhel8:2.3
                       - name: RELATED_IMAGE_plugin_registry
@@ -325,6 +333,8 @@ spec:
                         value: che-identity-postgres-secret
                       - name: CHE_POSTGRES_SECRET
                         value: che-postgres-secret
+                      - name: CHE_SERVER_TRUST_STORE_CONFIGMAP_NAME
+                        value: ca-certs
                     image: registry.redhat.io/codeready-workspaces/crw-2-rhel8-operator:2.3
                     imagePullPolicy: Always
                     name: codeready-operator
