--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -43,27 +43,25 @@ spec:
             - name: OPERATOR_NAME
               value: codeready-operator
             - name: CHE_VERSION
-              value: 2.3.0.GA
+              value: 2.3.0
             - name: RELATED_IMAGE_che_server
-              value: quay.io/eclipse/che-server:7.16.0
+              value: registry.redhat.io/codeready-workspaces/server-rhel8:2.2
             - name: RELATED_IMAGE_plugin_registry
-              value: quay.io/eclipse/che-plugin-registry:7.16.0
+              value: registry.redhat.io/codeready-workspaces/pluginregistry-rhel8:2.2
             - name: RELATED_IMAGE_devfile_registry
-              value: quay.io/eclipse/che-devfile-registry:7.16.0
-            - name: RELATED_IMAGE_che_tls_secrets_creation_job
-              value: quay.io/eclipse/che-tls-secret-creator:alpine-3029769
+              value: registry.redhat.io/codeready-workspaces/devfileregistry-rhel8:2.2
             - name: RELATED_IMAGE_pvc_jobs
-              value: registry.access.redhat.com/ubi8-minimal:8.2-301.1593113563
+              value: registry.access.redhat.com/ubi8-minimal:8.2
             - name: RELATED_IMAGE_postgres
-              value: centos/postgresql-96-centos7:9.6
+              value: registry.redhat.io/rhel8/postgresql-96:1
             - name: RELATED_IMAGE_keycloak
-              value: quay.io/eclipse/che-keycloak:7.16.0
+              value: registry.redhat.io/rh-sso-7/sso74-openshift-rhel8:7.4
             - name: RELATED_IMAGE_che_workspace_plugin_broker_metadata
-              value: quay.io/eclipse/che-plugin-metadata-broker:v3.2.0
+              value: registry.redhat.io/codeready-workspaces/pluginbroker-metadata-rhel8:2.2
             - name: RELATED_IMAGE_che_workspace_plugin_broker_artifacts
-              value: quay.io/eclipse/che-plugin-artifacts-broker:v3.2.0
+              value: registry.redhat.io/codeready-workspaces/pluginbroker-artifacts-rhel8:2.2
             - name: RELATED_IMAGE_che_server_secure_exposer_jwt_proxy_image
-              value: quay.io/eclipse/che-jwtproxy:fd94e60
+              value: registry.redhat.io/codeready-workspaces/jwtproxy-rhel8:2.2
             - name: CHE_FLAVOR
               value: codeready
             - name: CONSOLE_LINK_NAME
