--- a/manifests/codeready-workspaces.csv.yaml
+++ b/manifests/codeready-workspaces.csv.yaml
@@ -50,7 +50,7 @@ metadata:
     categories: Developer Tools, OpenShift Optional
     certified: "true"
     containerImage: registry-proxy.engineering.redhat.com/rh-osbs/codeready-workspaces-operator:2.3
-    createdAt: "2020-07-17T03:12:14+00:00"
+    createdAt: "2020-07-28T00:43:53+00:00"
     description: A Kube-native development solution that delivers portable and collaborative
       developer workspaces in OpenShift.
     operatorframework.io/cluster-monitoring: "true"
@@ -335,6 +335,34 @@ spec:
                         value: che-postgres-secret
                       - name: CHE_SERVER_TRUST_STORE_CONFIGMAP_NAME
                         value: ca-certs
+                      - name: RELATED_IMAGE_codeready_workspaces_machineexec
+                        value: registry-proxy.engineering.redhat.com/rh-osbs/codeready-workspaces-machineexec-rhel8:2.3
+                      - name: RELATED_IMAGE_codeready_workspaces_plugin_java11
+                        value: registry-proxy.engineering.redhat.com/rh-osbs/codeready-workspaces-plugin-java11-rhel8:2.3
+                      - name: RELATED_IMAGE_codeready_workspaces_plugin_java8
+                        value: registry-proxy.engineering.redhat.com/rh-osbs/codeready-workspaces-plugin-java8-rhel8:2.3
+                      - name: RELATED_IMAGE_codeready_workspaces_plugin_kubernetes
+                        value: registry-proxy.engineering.redhat.com/rh-osbs/codeready-workspaces-plugin-kubernetes-rhel8:2.3
+                      - name: RELATED_IMAGE_codeready_workspaces_plugin_openshift
+                        value: registry-proxy.engineering.redhat.com/rh-osbs/codeready-workspaces-plugin-openshift-rhel8:2.3
+                      - name: RELATED_IMAGE_codeready_workspaces_stacks_cpp
+                        value: registry-proxy.engineering.redhat.com/rh-osbs/codeready-workspaces-stacks-cpp-rhel8:2.3
+                      - name: RELATED_IMAGE_codeready_workspaces_stacks_dotnet
+                        value: registry-proxy.engineering.redhat.com/rh-osbs/codeready-workspaces-stacks-dotnet-rhel8:2.3
+                      - name: RELATED_IMAGE_codeready_workspaces_stacks_golang
+                        value: registry-proxy.engineering.redhat.com/rh-osbs/codeready-workspaces-stacks-golang-rhel8:2.3
+                      - name: RELATED_IMAGE_codeready_workspaces_stacks_php
+                        value: registry-proxy.engineering.redhat.com/rh-osbs/codeready-workspaces-stacks-php-rhel8:2.3
+                      - name: RELATED_IMAGE_codeready_workspaces_theia_endpoint
+                        value: registry-proxy.engineering.redhat.com/rh-osbs/codeready-workspaces-theia-endpoint-rhel8:2.3
+                      - name: RELATED_IMAGE_codeready_workspaces_theia
+                        value: registry-proxy.engineering.redhat.com/rh-osbs/codeready-workspaces-theia-rhel8:2.3
+                      - name: RELATED_IMAGE_jboss_eap_7_eap73_openjdk8_openshift_rhel7
+                        value: registry.redhat.io/jboss-eap-7/eap73-openjdk8-openshift-rhel7:7.3.1
+                      - name: RELATED_IMAGE_jboss_eap_7_eap_xp1_openjdk11_openshift
+                        value: registry.redhat.io/jboss-eap-7/eap-xp1-openjdk11-openshift-rhel8:1.0-3
+                      - name: RELATED_IMAGE_rhscl_mongodb_36_rhel7
+                        value: registry.redhat.io/rhscl/mongodb-36-rhel7:1-50
                     image: registry-proxy.engineering.redhat.com/rh-osbs/codeready-workspaces-operator:2.3
                     imagePullPolicy: Always
                     name: codeready-operator
