--- a/controller-manifests/v1.1.0/codeready-workspaces.crd.yaml
+++ b/controller-manifests/v1.1.0/codeready-workspaces.crd.yaml
@@ -19,6 +19,7 @@ spec:
     listKind: CheClusterList
     plural: checlusters
     singular: checluster
+  preserveUnknownFields: false
   scope: Namespaced
   subresources:
     status: {}
@@ -422,9 +423,13 @@ spec:
                     a proxy is required (see also the `proxyURL` `proxySecret` fields).
                   type: string
                 selfSignedCert:
-                  description: Deprecated. The value of this flag is ignored. Che
-                    operator will automatically detect if router certificate is self-signed.
-                    If so it will be propagated to Che server and some other components.
+                  description: Enables the support of OpenShift clusters whose router
+                    uses self-signed certificates. When enabled, the operator retrieves
+                    the default self-signed certificate of OpenShift routes and adds
+                    it to the Java trust store of the Che server. This is usually
+                    required when activating the `tlsSupport` field on demo OpenShift
+                    clusters that have not been setup with a valid certificate for
+                    the routes. This is disabled by default.
                   type: boolean
                 serverMemoryLimit:
                   description: Overrides the memory limit used in the Che server deployment.
@@ -442,9 +447,10 @@ spec:
                     its CA cert to be able to request it. This is disabled by default.
                   type: string
                 tlsSupport:
-                  description: Deprecated. Instructs the operator to deploy Che in
-                    TLS mode. This is enabled by default. Disabling TLS may cause
-                    malfunction of some Che components.
+                  description: 'Instructs the operator to deploy Che in TLS mode,
+                    ie with TLS routes or ingresses. This is disabled by default.
+                    WARNING: Enabling TLS might require enabling the `selfSignedCert`
+                    field also in some cases.'
                   type: boolean
                 workspaceNamespaceDefault:
                   description: 'Defines Kubernetes default namespace in which user''s
@@ -541,8 +547,9 @@ spec:
                 the pod is in this state.
               type: string
           type: object
+      type: object
   version: v1
   versions:
-  - name: v1
-    served: true
-    storage: true
+    - name: v1
+      served: true
+      storage: true
