--- a/controller-manifests/wazi-codeready-operator.package.yaml
+++ b/controller-manifests/wazi-codeready-operator.package.yaml
@@ -14,4 +14,6 @@ packageName: wazi-codeready-operator
 defaultChannel: latest
 channels:
   - name: latest
+    currentCSV: wazi-codeready-operator.v1.1.0
+  - name: previous
     currentCSV: wazi-codeready-operator.v1.0.0
