--- a/controller-manifests/v2.3.0/codeready-workspaces.csv.yaml
+++ b/controller-manifests/v2.3.0/codeready-workspaces.csv.yaml
@@ -50,7 +50,7 @@ metadata:
     categories: Developer Tools, OpenShift Optional
     certified: "true"
     containerImage: registry-proxy.engineering.redhat.com/rh-osbs/codeready-workspaces-operator:2.3
-    createdAt: "2020-07-28T18:29:14+00:00"
+    createdAt: "2020-07-30T21:47:05+00:00"
     description: A Kube-native development solution that delivers portable and collaborative
       developer workspaces in OpenShift.
     operatorframework.io/suggested-namespace: openshift-workspaces
@@ -138,7 +138,7 @@ spec:
 
     * Auto-generated passwords
 
-    * HTTP mode (non-secure routes)
+    * TLS mode (secure routes)
 
     * Regular login extended with OpenShift OAuth authentication
 
@@ -149,8 +149,6 @@ spec:
     * Connection to external database and Red Hat SSO
 
     * Configuration of default passwords and object names
-
-    * TLS mode
 
     * PVC strategy (once shared PVC for all workspaces, PVC per workspace, or PVC per volume)
 
@@ -196,24 +194,9 @@ spec:
       `identityProviderClientId: 'myClient'`
 
 
-    ### TLS Mode
-
-    To activate TLS mode, set the respective field in the CR spec to `true` (in the `server` block):
-
-
-    ```
-    tlsSupport: true
-    ```
-
     #### Self-signed Certificates
 
-    To use CodeReady Workspaces with TLS enabled, but the OpenShift router does not use certificates signed by a public authority, you can use self-signed certificates, which the operator can fetch for you:
-
-
-    ```
-    selfSignedCert: true
-    ```
-
+    CodeReady Workspaces uses self-signed certificates by default.
 
     You can also manually create a secret:
 
