initial release of CRW 2.4 operator metadata / csv; will be synched from upstream/overwritten with appropriate changes
Change-Id: I1ad93345702e36e20c97980c98c5ec73a6d3bfe6
Signed-off-by: nickboldt <nboldt@redhat.com>

--- a/controller-manifests/codeready-workspaces.package.yaml
+++ b/controller-manifests/codeready-workspaces.package.yaml
@@ -4,7 +4,9 @@
 packageName: codeready-workspaces
 channels:
 - name: latest
-  currentCSV: crwoperator.v2.3.0
+  currentCSV: crwoperator.v2.4.0
+- name: ocp43
+  currentCSV: crwoperator.v2.2.0
 - name: previous
   currentCSV: crwoperator.v1.2.2
 defaultChannel: latest
