--- a/controller-manifests/v2.4.0/codeready-workspaces.csv.yaml
+++ b/controller-manifests/v2.4.0/codeready-workspaces.csv.yaml
@@ -50,7 +50,7 @@ metadata:
     categories: Developer Tools, OpenShift Optional
     certified: "true"
     containerImage: registry-proxy.engineering.redhat.com/rh-osbs/codeready-workspaces-operator:2.4
-    createdAt: "2020-08-27T11:43:25+00:00"
+    createdAt: "2020-08-27T16:57:38+00:00"
     description: A Kube-native development solution that delivers portable and collaborative
       developer workspaces in OpenShift.
     operatorframework.io/suggested-namespace: openshift-workspaces
@@ -318,10 +318,26 @@ spec:
                         value: che-postgres-secret
                       - name: CHE_SERVER_TRUST_STORE_CONFIGMAP_NAME
                         value: ca-certs
+                      - name: RELATED_IMAGE_keycloak_ppc64le
+                        value: registry.redhat.io/rh-sso-7/sso74-openj9-openshift-rhel8:7.4
+                      - name: RELATED_IMAGE_keycloak_s390x
+                        value: registry.redhat.io/rh-sso-7/sso74-openj9-openshift-rhel8:7.4
                       - name: RELATED_IMAGE_codeready_workspaces_machineexec
                         value: registry-proxy.engineering.redhat.com/rh-osbs/codeready-workspaces-machineexec-rhel8:2.4
+                      - name: RELATED_IMAGE_codeready_workspaces_plugin_java11_openj9
+                        value: registry-proxy.engineering.redhat.com/rh-osbs/codeready-workspaces-plugin-java11-openj9-rhel8:2.4
+                      - name: RELATED_IMAGE_codeready_workspaces_plugin_java11_s390x
+                        value: registry-proxy.engineering.redhat.com/rh-osbs/codeready-workspaces-plugin-java11-openj9-rhel8:2.4
+                      - name: RELATED_IMAGE_codeready_workspaces_plugin_java11_ppc64le
+                        value: registry-proxy.engineering.redhat.com/rh-osbs/codeready-workspaces-plugin-java11-openj9-rhel8:2.4
                       - name: RELATED_IMAGE_codeready_workspaces_plugin_java11
                         value: registry-proxy.engineering.redhat.com/rh-osbs/codeready-workspaces-plugin-java11-rhel8:2.4
+                      - name: RELATED_IMAGE_codeready_workspaces_plugin_java8_openj9
+                        value: registry-proxy.engineering.redhat.com/rh-osbs/codeready-workspaces-plugin-java8-openj9-rhel8:2.4
+                      - name: RELATED_IMAGE_codeready_workspaces_plugin_java8_s390x
+                        value: registry-proxy.engineering.redhat.com/rh-osbs/codeready-workspaces-plugin-java8-openj9-rhel8:2.4
+                      - name: RELATED_IMAGE_codeready_workspaces_plugin_java8_ppc64le
+                        value: registry-proxy.engineering.redhat.com/rh-osbs/codeready-workspaces-plugin-java8-openj9-rhel8:2.4
                       - name: RELATED_IMAGE_codeready_workspaces_plugin_java8
                         value: registry-proxy.engineering.redhat.com/rh-osbs/codeready-workspaces-plugin-java8-rhel8:2.4
                       - name: RELATED_IMAGE_codeready_workspaces_plugin_kubernetes
@@ -342,6 +358,12 @@ spec:
                         value: registry-proxy.engineering.redhat.com/rh-osbs/codeready-workspaces-theia-rhel8:2.4
                       - name: RELATED_IMAGE_jboss_eap_7_eap73_openjdk8_openshift_rhel7
                         value: registry.redhat.io/jboss-eap-7/eap73-openjdk8-openshift-rhel7:7.3.1
+                      - name: RELATED_IMAGE_jboss_eap_7_eap_xp1_openj9_11_openshift
+                        value: registry.redhat.io/jboss-eap-7/eap-xp1-openj9-11-openshift-rhel8:1.0
+                      - name: RELATED_IMAGE_jboss_eap_7_eap_xp1_openjdk11_openshift_s390x
+                        value: registry.redhat.io/jboss-eap-7/eap-xp1-openj9-11-openshift-rhel8:1.0
+                      - name: RELATED_IMAGE_jboss_eap_7_eap_xp1_openjdk11_openshift_ppc64le
+                        value: registry.redhat.io/jboss-eap-7/eap-xp1-openj9-11-openshift-rhel8:1.0
                       - name: RELATED_IMAGE_jboss_eap_7_eap_xp1_openjdk11_openshift
                         value: registry.redhat.io/jboss-eap-7/eap-xp1-openjdk11-openshift-rhel8:1.0-3
                       - name: RELATED_IMAGE_rhscl_mongodb_36_rhel7
@@ -374,6 +396,7 @@ spec:
                 - route.openshift.io
               resources:
                 - routes
+                - routes/custom-host
               verbs:
                 - '*'
             - apiGroups:
