Update to CRW 2.3

--- a/deploy/cluster_role.yaml
+++ b/deploy/cluster_role.yaml
@@ -30,8 +30,11 @@ rules:
     resources:
       - infrastructures
       - oauths
+      - proxies
     verbs:
       - get
+      - list
+      - watch
   - apiGroups:
       - user.openshift.io
     resources:
