--- a/controller-manifests/v1.1.0/codeready-workspaces.crd.yaml
+++ b/controller-manifests/v1.1.0/codeready-workspaces.crd.yaml
@@ -19,7 +19,6 @@ spec:
     listKind: CheClusterList
     plural: checlusters
     singular: checluster
-  preserveUnknownFields: false
   scope: Namespaced
   subresources:
     status: {}
@@ -251,7 +250,7 @@ spec:
                 used by the Che installation.
               properties:
                 enable:
-                  description: Enables `metrics` Che server endpoint. Default to `false`.
+                  description: Enables `metrics` Che server endpoint. Default to `true`.
                   type: boolean
               type: object
             server:
@@ -372,8 +371,13 @@ spec:
                 nonProxyHosts:
                   description: List of hosts that should not use the configured proxy.
                     Use `|`` as delimiter, eg `localhost|my.host.com|123.42.12.32`
-                    Only use when configuring a proxy is required (see also the `proxyURL`
-                    field).
+                    Only use when configuring a proxy is required. Operator respects
+                    OpenShift cluster wide proxy configuration and no additional configuration
+                    is required, but defining `nonProxyHosts` in a custom resource
+                    leads to merging non proxy hosts lists from the cluster proxy
+                    configuration and ones defined in the custom resources. (see the
+                    doc https://docs.openshift.com/container-platform/4.4/networking/enable-cluster-wide-proxy.html)
+                    (see also the `proxyURL` fields).
                   type: string
                 pluginRegistryImage:
                   description: Overrides the container image used in the Plugin registry
@@ -401,11 +405,13 @@ spec:
                   type: string
                 proxyPassword:
                   description: Password of the proxy server Only use when proxy configuration
-                    is required (see also the `proxyUser` and `proxySecret` fields).
+                    is required (see also the `proxyURL`, `proxyUser` and `proxySecret`
+                    fields).
                   type: string
                 proxyPort:
                   description: Port of the proxy server. Only use when configuring
-                    a proxy is required (see also the `proxyURL` field).
+                    a proxy is required. (see also the `proxyURL` and `nonProxyHosts`
+                    fields).
                   type: string
                 proxySecret:
                   description: The secret that contains `user` and `password` for
@@ -416,20 +422,23 @@ spec:
                   description: URL (protocol+hostname) of the proxy server. This drives
                     the appropriate changes in the `JAVA_OPTS` and `https(s)_proxy`
                     variables in the Che server and workspaces containers. Only use
-                    when configuring a proxy is required.
+                    when configuring a proxy is required. Operator respects OpenShift
+                    cluster wide proxy configuration and no additional configuration
+                    is required, but defining `proxyUrl` in a custom resource leads
+                    to overrides the cluster proxy configuration with fields `proxyUrl`,
+                    `proxyPort`, `proxyUser` and `proxyPassword` from the custom resource.
+                    (see the doc https://docs.openshift.com/container-platform/4.4/networking/enable-cluster-wide-proxy.html)
+                    (see also the `proxyPort` and `nonProxyHosts` fields).
                   type: string
                 proxyUser:
                   description: User name of the proxy server. Only use when configuring
-                    a proxy is required (see also the `proxyURL` `proxySecret` fields).
+                    a proxy is required (see also the `proxyURL`, `proxyPassword`
+                    and `proxySecret` fields).
                   type: string
                 selfSignedCert:
-                  description: Enables the support of OpenShift clusters whose router
-                    uses self-signed certificates. When enabled, the operator retrieves
-                    the default self-signed certificate of OpenShift routes and adds
-                    it to the Java trust store of the Che server. This is usually
-                    required when activating the `tlsSupport` field on demo OpenShift
-                    clusters that have not been setup with a valid certificate for
-                    the routes. This is disabled by default.
+                  description: Deprecated. The value of this flag is ignored. Che
+                    operator will automatically detect if router certificate is self-signed.
+                    If so it will be propagated to Che server and some other components.
                   type: boolean
                 serverMemoryLimit:
                   description: Overrides the memory limit used in the Che server deployment.
@@ -447,10 +456,9 @@ spec:
                     its CA cert to be able to request it. This is disabled by default.
                   type: string
                 tlsSupport:
-                  description: 'Instructs the operator to deploy Che in TLS mode,
-                    ie with TLS routes or ingresses. This is disabled by default.
-                    WARNING: Enabling TLS might require enabling the `selfSignedCert`
-                    field also in some cases.'
+                  description: Deprecated. Instructs the operator to deploy Che in
+                    TLS mode. This is enabled by default. Disabling TLS may cause
+                    malfunction of some Che components.
                   type: boolean
                 workspaceNamespaceDefault:
                   description: 'Defines Kubernetes default namespace in which user''s
@@ -547,9 +555,8 @@ spec:
                 the pod is in this state.
               type: string
           type: object
-      type: object
   version: v1
   versions:
-    - name: v1
-      served: true
-      storage: true
+  - name: v1
+    served: true
+    storage: true
