--- a/deploy/operator-local.yaml
+++ b/deploy/operator-local.yaml
@@ -44,29 +44,29 @@ spec:
             - name: OPERATOR_NAME
               value: codeready-operator
             - name: CHE_VERSION
-              value: 2.2.0
-            - name: IMAGE_default_che_server
-              value: registry.redhat.io/codeready-workspaces/server-rhel8:2.2
-            - name: IMAGE_default_plugin_registry
-              value: registry.redhat.io/codeready-workspaces/pluginregistry-rhel8:2.2
-            - name: IMAGE_default_devfile_registry
-              value: registry.redhat.io/codeready-workspaces/devfileregistry-rhel8:2.2
-            - name: IMAGE_default_pvc_jobs
+              value: 2.3.0
+            - name: RELATED_IMAGE_che_server
+              value: registry.redhat.io/codeready-workspaces/server-rhel8:2.3
+            - name: RELATED_IMAGE_plugin_registry
+              value: registry.redhat.io/codeready-workspaces/pluginregistry-rhel8:2.3
+            - name: RELATED_IMAGE_devfile_registry
+              value: registry.redhat.io/codeready-workspaces/devfileregistry-rhel8:2.3
+            - name: RELATED_IMAGE_pvc_jobs
               value: registry.access.redhat.com/ubi8-minimal:8.2
-            - name: IMAGE_default_postgres
+            - name: RELATED_IMAGE_postgres
               value: registry.redhat.io/rhel8/postgresql-96:1
-            - name: IMAGE_default_keycloak
+            - name: RELATED_IMAGE_keycloak
               value: registry.redhat.io/rh-sso-7/sso74-openshift-rhel8:7.4
-            - name: IMAGE_default_che_workspace_plugin_broker_metadata
-              value: registry.redhat.io/codeready-workspaces/pluginbroker-metadata-rhel8:2.2
-            - name: IMAGE_default_che_workspace_plugin_broker_artifacts
-              value: registry.redhat.io/codeready-workspaces/pluginbroker-artifacts-rhel8:2.2
-            - name: IMAGE_default_che_server_secure_exposer_jwt_proxy_image
-              value: registry.redhat.io/codeready-workspaces/jwtproxy-rhel8:2.2
+            - name: RELATED_IMAGE_che_workspace_plugin_broker_metadata
+              value: registry.redhat.io/codeready-workspaces/pluginbroker-metadata-rhel8:2.3
+            - name: RELATED_IMAGE_che_workspace_plugin_broker_artifacts
+              value: registry.redhat.io/codeready-workspaces/pluginbroker-artifacts-rhel8:2.3
+            - name: RELATED_IMAGE_che_server_secure_exposer_jwt_proxy_image
+              value: registry.redhat.io/codeready-workspaces/jwtproxy-rhel8:2.3
             - name: CHE_FLAVOR
               value: codeready
             - name: CONSOLE_LINK_NAME
-              value: workspaces
+              value: che
             - name: CONSOLE_LINK_DISPLAY_NAME
               value: CodeReady Workspaces
             - name: CONSOLE_LINK_SECTION
@@ -79,3 +79,5 @@ spec:
               value: che-identity-postgres-secret
             - name: CHE_POSTGRES_SECRET
               value: che-postgres-secret
+            - name: CHE_SERVER_TRUST_STORE_CONFIGMAP_NAME
+              value: ca-certs
