--- a/controller-manifests/v1.0.0/wazi-codeready-operator.csv.yaml
+++ b/controller-manifests/v1.0.0/wazi-codeready-operator.csv.yaml
@@ -123,38 +123,38 @@ spec:
         version: v1
   displayName: IBM Wazi Development Client
   description: |
-    IBM&reg; Wazi for Red Hat&reg; CodeReady Workspaces (IBM&reg; Wazi Development Client), delivers cloud-native developer experience, enabling development and testing of IBM z/OS application components in containerized, z/OS sandbox environment on Red Hat OpenShift Container Platform running on x86 hardware, and providing capability to deploy applications into production on native z/OS running on IBM Z hardware. IBM&reg; Wazi Development Client is a development environment that provides an in-browser IDE with a single-click developer workspace with the capabilities to code, edit, build, and debug.  
+    IBM Wazi for Red Hat CodeReady Workspaces (IBM Wazi Development Client), delivers cloud-native developer experience, enabling development and testing of IBM z/OS application components in containerized, z/OS sandbox environment on Red Hat OpenShift Container Platform running on x86 hardware, and providing capability to deploy applications into production on native z/OS running on IBM Z hardware. IBM Wazi Development Client is a development environment that provides an in-browser IDE with a single-click developer workspace with the capabilities to code, edit, build, and debug.  
       
-    IBM&reg; Wazi Development Client is built on the Red Hat&reg; CodeReady Workspaces project. The core functionality for Red Hat&reg; CodeReady Workspaces is provided by an open-source project called Eclipse Che. IBM Wazi Development Client uses Kubernetes and containers to provide your team with a consistent, secure, and zero-configuration development environment that interacts with your IBM Z&reg; platform.  
+    IBM Wazi Development Client is built on the Red Hat CodeReady Workspaces project. The core functionality for Red Hat CodeReady Workspaces is provided by an open-source project called Eclipse Che. IBM Wazi Development Client uses Kubernetes and containers to provide your team with a consistent, secure, and zero-configuration development environment that interacts with your IBM Z platform.  
       
-    IBM&reg; Wazi Development Client provides a modern experience for mainframe software developers working with z/OS applications in the cloud. Powered by the open-source projects Zowe&trade; and Red Hat CodeReady Workspaces, IBM&reg; Wazi Development Client offers an easy, streamlined on-boarding process to provide mainframe developers the tools they need. Using container technology and stacks, IBM&reg; Wazi Development Client brings the necessary technology to the task at hand.
+    IBM Wazi Development Client provides a modern experience for mainframe software developers working with z/OS applications in the cloud. Powered by the open-source projects Zowe and Red Hat CodeReady Workspaces, IBM Wazi Development Client offers an easy, streamlined on-boarding process to provide mainframe developers the tools they need. Using container technology and stacks, IBM Wazi Development Client brings the necessary technology to the task at hand.
 
     ## Features
 
-    IBM&reg; Wazi Development Client provides a custom stack for mainframe developers with the all-in-one mainframe development package that includes the following capabilities:
+    IBM Wazi Development Client provides a custom stack for mainframe developers with the all-in-one mainframe development package that includes the following capabilities:
 
-    - Modern mainframe editor with rich language support for COBOL, JCL, Assembler (HLASM), and PL/I that provide language-specific features such as syntax highlighting, outline view, declaration hovering, code completion, snippets, a preview of copybooks, copybook navigation, and basic refactoring using [IBM&reg; Z Open Editor](https://marketplace.visualstudio.com/items?itemName=IBM.zopeneditor)
+    - Modern mainframe editor with rich language support for COBOL, JCL, Assembler (HLASM), and PL/I that provide language-specific features such as syntax highlighting, outline view, declaration hovering, code completion, snippets, a preview of copybooks, copybook navigation, and basic refactoring using [IBM Z Open Editor](https://marketplace.visualstudio.com/items?itemName=IBM.zopeneditor)
     - Source code management (SCM) integration to enable integration with any flavor of Git, a popular and modern parallel development SCM
     - Intelligent build capability that enables developers to perform a user build with IBM Dependency Based Build for any flavor of Git
-    - Integrations that enable developers to work with z/OS resources such as MVS&trade; and UNIX&reg; files and JES jobs
-    - Connectivity to Z host using [Zowe&trade; Explorer](https://marketplace.visualstudio.com/items?itemName=Zowe.vscode-extension-for-zowe)
-    - Running user builds using [IBM&reg; Z User Build](https://www.ibm.com/support/knowledgecenter/SSCH39_1.0.0/com.ibm.wazi.development.client.doc/user_build_setup_run.html)
-    - Interacting with the [IBM&reg; Remote System Explorer API](https://ibm.github.io/zopeneditor-about/Docs/interact_zos_overview.html)
-    - Mainframe Development package with custom plugin and devfile registry support using the [IBM&reg; Wazi Development Client stack](https://github.com/IBM/wazi-codeready-workspaces)
+    - Integrations that enable developers to work with z/OS resources such as MVS and UNIX files and JES jobs
+    - Connectivity to Z host using [Zowe Explorer](https://marketplace.visualstudio.com/items?itemName=Zowe.vscode-extension-for-zowe)
+    - Running user builds using [IBM Z User Build](https://www.ibm.com/support/knowledgecenter/SSCH39_1.0.0/com.ibm.wazi.development.client.doc/user_build_setup_run.html)
+    - Interacting with the [IBM Remote System Explorer API](https://ibm.github.io/zopeneditor-about/Docs/interact_zos_overview.html)
+    - Mainframe Development package with custom plugin and devfile registry support using the [IBM Wazi Development Client stack](https://github.com/IBM/wazi-codeready-workspaces)
       
-    Read our official documentation on the [IBM&reg; Knowledge Center](http://ibm.biz/ibmwazidoc) to learn more about IBM&reg; Wazi Development Client. 
+    Read our official documentation on the [IBM Knowledge Center](https://www.ibm.com/support/knowledgecenter/SSCH39) to learn more about IBM Wazi Development Client. 
 
     ## Installing
     Press the **Install** button, select the namespace, choose the update strategy, click the Subscribe button, and wait for the **Succeeded** Operator status.
 
-    When the operator is installed, create a new instance of the IBM&reg; Wazi Development Client (click the **Create Instance** button).  
+    When the operator is installed, create a new instance of the IBM Wazi Development Client (click the **Create Instance** button).  
 
-    IBM&reg; Wazi Development Client spec contains all defaults (see below).
+    IBM Wazi Development Client spec contains all defaults (see below).
 
-    You can start using the IBM&reg; Wazi Development Client when the status is set to **Available**, and you see a URL.
+    You can start using the IBM Wazi Development Client when the status is set to **Available**, and you see a URL.
 
     ### Defaults
-    By default, the operator deploys the IBM&reg; Wazi Development Client with:
+    By default, the operator deploys the IBM Wazi Development Client with:
 
     - Bundled PostgreSQL and Red Hat SSO
     - Per-Workspace PVC strategy
@@ -163,7 +163,7 @@ spec:
     - Built-in authentication ([RH-SSO](https://access.redhat.com/documentation/en-us/red_hat_codeready_workspaces/2.1/html/administration_guide/managing-users_crw#configuring-authorization_crw))
 
     ### Installation Options
-    IBM&reg; Wazi Development Client operator installation options include:
+    IBM Wazi Development Client operator installation options include:
 
     - PVC strategy (per-workspace, common, unique)
     - External Database and Red Hat SSO
@@ -178,7 +178,7 @@ spec:
 
     To instruct the operator to skip deploying PostgreSQL and Red Hat SSO and connect to an existing DB and Red Hat SSO instead:
 
-    - set respective fields to `true` in the spec when creating an instance of the IBM&reg; Wazi Development Client
+    - set respective fields to `true` in the spec when creating an instance of the IBM Wazi Development Client
     - provide the operator with connection and authentication details:
       
       `externalDb: true`
@@ -203,7 +203,7 @@ spec:
 
     #### Self Signed Certificate and TLS Support
 
-    To use IBM&reg; Wazi Development Client with TLS enabled, an OpenShift router must use a signed certificate. A certificate signed by a public authority can automatically be fetched, however when the certificate is self-signed further configuration is required.
+    To use IBM Wazi Development Client with TLS enabled, an OpenShift router must use a signed certificate. A certificate signed by a public authority can automatically be fetched, however when the certificate is self-signed further configuration is required.
     If using a self-signed certificate generated by the operator set the respective field to `true` (in the `server` block):
       
     ```
@@ -224,7 +224,7 @@ spec:
 
     #### Authentication Support
 
-    [OpenShift&reg; OAuth](https://docs.openshift.com/container-platform/4.4/authentication/understanding-authentication.html) authentication support requires oAuth to be configured in the cluster. To enable OpenShift&reg; OAuth authentication set the respective field in the spec to `true` (in the `server` block):
+    [OpenShift OAuth](https://docs.openshift.com/container-platform/4.4/authentication/understanding-authentication.html) authentication support requires oAuth to be configured in the cluster. To enable OpenShift OAuth authentication set the respective field in the spec to `true` (in the `server` block):
 
     ```
     openShiftoAuth: true
@@ -248,7 +248,7 @@ spec:
     - name: Product Page
       url: https://www.ibm.com/products/wazi-for-red-hat-codeready-workspaces
     - name: Documentation
-      url: http://ibm.biz/ibmwazidoc
+      url: https://www.ibm.com/support/knowledgecenter/SSCH39
     - name: Support
       url: https://github.com/IBM/wazi-codeready-workspaces/issues
   icon:
