CRW-1187 remove previous = crwoperator.v1.2.2; add ocp44 and ocp45 channels for CRW 2.4
Change-Id: If51fbeb481e8dc51054ac0675d742abcef4a768d
Signed-off-by: nickboldt <nboldt@redhat.com>

--- a/controller-manifests/codeready-workspaces.package.yaml
+++ b/controller-manifests/codeready-workspaces.package.yaml
@@ -5,9 +5,10 @@ packageName: codeready-workspaces
 channels:
 - name: latest
   currentCSV: crwoperator.v2.4.0
+- name: ocp45
+  currentCSV: crwoperator.v2.4.0 
+- name: ocp44
+  currentCSV: crwoperator.v2.4.0 
 - name: ocp43
-  currentCSV: crwoperator.v2.2.0
-- name: previous
-  currentCSV: crwoperator.v1.2.2
+  currentCSV: crwoperator.v2.2.0 
 defaultChannel: latest
-
